--- a/htdocs/Help/HelpContents.htm
+++ b/htdocs/Help/HelpContents.htm
@@ -3,10 +3,9 @@
 <head>
 </head>
 <body bgcolor="#FFFFFF">
-<APPLET code="HHCtrl.class" archive="HHCtrl.zip" name="HHCtrl" width=100% height=100%>
+<APPLET code="HHCtrl.class" name="HHCtrl" width=100% height=100%>
      <PARAM name="Command" value="Contents">
      <PARAM name="Item1" value="TOC.hhc">
-		 <param name="cabbase" value="HHCtrl.cab">
 		 <param name="Frame" value="main">
 </APPLET> 
 </body>
