--- a/htdocs/Links.htm
+++ b/htdocs/Links.htm
@@ -73,11 +73,12 @@ VirtualDub Plug-ins</a><br>
  Discussion</h3>
 
 <blockquote>
-<p><a href=
+<p>
+<a href=
 "http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=89606">
 DScaler 3.1.0 Release Thread</a> (AVS Forum)<br>
 
-<p><a href=
+<a href=
 "http://www.avsforum.com/avs-vb/showthread.php?s=&threadid=32723">
 DScaler 2.3.0 Release Thread</a> (AVS Forum)<br>
  
